# CPP-Blank-Project-Template

./: .gitignore  CMakeLists.txt  README.md
cmake/: .gitignore
cmake/modules/: FindGLEW.cmake  FindGLFW.cmake  Findboost_filesystem.cmake  Findboost_system.cmake  Findlua.cmake
include/: .gitignore
lib/: .gitignore
src/: .gitignore
